--- a/src/app/modules/admin/example2/example2.component.html
+++ b/src/app/modules/admin/example2/example2.component.html
@@ -11,9 +11,12 @@
          <div class="grid grid-cols-1 lg:grid-cols-2 grid-flow-row gap-6 w-full mt-8 sm:mt-4">
              <!-- New vs. Closed -->
              <div class="flex flex-col flex-auto">
-                 <div class="font-medium text-secondary">New vs. Closed</div>
+                 <div class="font-medium text-secondary">File </div>
                  <div class="flex flex-col flex-auto">
-                     
+                  <br>
+                
+                  <pre><strong>{{ fileContent }}</strong></pre>
+
                  </div>
              </div>
              <!-- Overview -->
@@ -21,14 +24,14 @@
                  <div class="font-medium text-secondary">Elements</div>
                  <mat-form-field>
                   <mat-label>Favorite elements</mat-label>
-                  <mat-chip-grid #chipGrid aria-label="Enter elements">
+                  <mat-chip-grid #chipGrid aria-label="Enter elements" >
                     @for (element of elements(); track element) {
-                      <mat-chip-row
+                      <mat-chip-row 
+                        (click)="selectElement(element)"
                         (removed)="remove(element)"
                         [editable]="true"
                         (edited)="edit(element, $event)"
-                        [aria-description]="'press enter to edit ' + element.name"
-                      >
+                        [aria-description]="'press enter to edit ' + element.name">
                         {{element.name}}
                         <button matChipRemove [attr.aria-label]="'remove ' + element.name">
                           <mat-icon>cancel</mat-icon>
@@ -41,29 +44,44 @@
                       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                       [matChipInputAddOnBlur]="addOnBlur"
                       (matChipInputTokenEnd)="add($event)"
+                      matInput
                     />
                   </mat-chip-grid>
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="outline">
-                  <textarea matInput style="width: 100%; height: 300px;" placeholder="Enter text..."></textarea>
-              </mat-form-field>
+                  <textarea 
+                    matInput 
+                    style="width: 100%; height: 300px;" 
+                    placeholder="Enter text..." 
+                    [value]="selectedElementText()"
+                    (input)="onTextareaInput($event)"
+                    (keydown)="handleKeydown($event)"
+                  ></textarea>
+                </mat-form-field>
              </div>
          </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+      <button mat-raised-button color="primary" (click)="submitFile()">Submit</button>
+      
+      <div>
+        <h2>Upload File</h2>
+        <input type="file" (change)="onFileSelected($event)">
+        <hr>
+        <div *ngIf="file">
+          <h3>Selected File:</h3>
+          <p><strong>Name:</strong> {{ file.name }}</p>
+          <p><strong>Type:</strong> {{ file.type }}</p>
+          <p><strong>Size:</strong> {{ file.size }} bytes</p>
+          <hr>
+          <h3>File Content:</h3>
+          <pre>{{ fileContent }}</pre>
+        </div>
+        <div *ngIf="responseMessage">
+          <p>{{ responseMessage }}</p>
+        </div>
+      </div>
+      
 
      </div>
   </div>
