--- a/src/app/modules/admin/example2/example2.component.html
+++ b/src/app/modules/admin/example2/example2.component.html
@@ -3,9 +3,29 @@
   <div class="flex-auto p-6 sm:p-10">
   <!-- CONTENT GOES HERE -->
   <div class="h-400 min-h-400 max-h-400 border-2  border-gray-300 rounded-2xl">
+    <!-- Header -->
+    <div class="flex flex-col sm:flex-row items-start sm:items-center sm:justify-between p-6 sm:py-12 md:px-8 border-b bg-card dark:bg-transparent rounded-2xl">
+      <!-- Title -->
+      <div>
+          <div class="text-4xl font-extrabold tracking-tight leading-none">File Manager</div>
+          
+      </div>
+      <!-- Actions -->
+      <div class="mt-4 sm:mt-0">
+          <!-- Upload button -->
+          <button mat-flat-button [color]="'bg-primary'" (click)="fileInput.click()">
+            <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
+            <span class="ml-2 mr-1">Upload file</span>
+          </button>
+          <input type="file" #fileInput style="display: none;" (change)="onFileSelected($event)">
+      </div>
+    </div>
+    <br>
+
+
        <div class="sm:col-span-2 md:col-span-4 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
          <div class="flex flex-col sm:flex-row items-start justify-between">
-             <div class="text-lg font-medium tracking-tight leading-6 truncate">Github Issues Summary</div>
+             <div class="text-lg font-medium tracking-tight leading-6 truncate">Content file</div>
              
          </div>
          <div class="grid grid-cols-1 lg:grid-cols-2 grid-flow-row gap-6 w-full mt-8 sm:mt-4">
@@ -52,37 +72,19 @@
                 <mat-form-field appearance="outline">
                   <textarea 
                     matInput 
-                    style="width: 100%; height: 300px;" 
+                    class="custom-textarea" 
                     placeholder="Enter text..." 
                     [value]="selectedElementText()"
                     (input)="onTextareaInput($event)"
                     (keydown)="handleKeydown($event)"
                   ></textarea>
                 </mat-form-field>
+                <button mat-raised-button color="primary" (click)="submitFile()">Submit</button>
              </div>
          </div>
       </div>
-      <button mat-raised-button color="primary" (click)="submitFile()">Submit</button>
       
-      <div>
-        <h2>Upload File</h2>
-        <input type="file" (change)="onFileSelected($event)">
-        <hr>
-        <div *ngIf="file">
-          <h3>Selected File:</h3>
-          <p><strong>Name:</strong> {{ file.name }}</p>
-          <p><strong>Type:</strong> {{ file.type }}</p>
-          <p><strong>Size:</strong> {{ file.size }} bytes</p>
-          <hr>
-          <h3>File Content:</h3>
-          <pre>{{ fileContent }}</pre>
-        </div>
-        <div *ngIf="responseMessage">
-          <p>{{ responseMessage }}</p>
-        </div>
-      </div>
       
-
      </div>
   </div>
 </div>
